# entropy

./: .gitignore  Cargo.toml  TODOLIST.md
binaries/ia/: Cargo.toml
binaries/ia/src/: error.rs  main.rs  prelude.rs  store.rs
binaries/ia/src/commands/: apply.rs  ask.rs  mod.rs
binaries/randomizer/: Cargo.toml
binaries/randomizer/src/: main.rs
binaries/shia/: Cargo.toml
binaries/shia/src/: main.rs  prelude.rs  state.rs  view.rs
crates/api-connector/: Cargo.toml
crates/api-connector/src/: error.rs  keyring.rs  lib.rs  openai.rs  prelude.rs  stable_diffusion.rs
crates/guy/: Cargo.toml
crates/guy/src/: error.rs  lib.rs  prelude.rs  template.rs
crates/missy/: Cargo.toml
crates/prompt-generator/: Cargo.toml
crates/prompt-generator/src/: error.rs  lib.rs  prelude.rs  schemas.rs
data/chunks/card/: card.yaml
data/guys/: code_doc.yaml  crypto.yaml  crypto_dataset.txt  doc_step_aggregator.yaml  prompt_enginer.yaml
data/guys/code/: sysadmin.yaml
data/img_generator/chunks/card/: card.yaml
data/img_generator/chunks/card/class/: elf.yaml  goblin.yaml
data/img_generator/templates/: card.yaml
tests-data/card/: test_arbustre_1.yaml
