[package]
name = "ia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.19", features = [ "crossterm" ] }
tui-textarea = { version = "0.2.0", features = [ "crossterm" ] }
clap = { version = "4",features = ["derive"] }
inquire = { version = "0.6.2", features = ["date"] }
sled = "0.34"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.32", features = [ "full" ] }
atty = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.25"
bincode = "1.3"
dotenv = "0.15"
tempfile = "3.8"
termimad = "0.25"

guy = { path = "../../crates/guy" }
api-connector = { path = "../../crates/api-connector" }