[package]
name = "randomizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prompt-generator = { path = "../../crates/prompt-generator" }
api-connector = { path = "../../crates/api-connector" }
clap = { version = "3.0", features = [ "derive" ] }
dotenv = "0.15"
inquire = { version = "0.6.2" }
tokio = { version = "1.12", features = [ "full" ] }