[package]
name = "shia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.19", features = [ "crossterm" ] }
tui-textarea = { version = "0.2.0", features = [ "crossterm" ] }
crossterm = "*"