[package]
name = "guy"
version = "0.1.0"
edition = "2021"
description = "A guy who can do stuff."
authors = [ "Asya Corbeau" ]

[dependencies]
api-connector = { path = "../api-connector" }
thiserror = "1.0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = "*"

[dev-dependencies]
dotenv = "0.15"